--- a/streamlit_energy_app/requirements.txt
+++ b/streamlit_energy_app/requirements.txt
@@ -11,8 +11,12 @@ python-dotenv
 sqlalchemy 
 pymongo
 passlib[bcrypt]
-prophet 
-cmdstanpy 
-itsdangerous 
+torch
+torchvision
+prophet
+cmdstanpy
+joblib
+itsdangerous
+
 
 
